<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_gradient"
    android:padding="@dimen/screen_padding">

    <TextView
        android:id="@+id/otpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_title"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing_small" />

    <TextView
        android:id="@+id/otpDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_description"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/otpInput1"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_height"
            android:layout_weight="1"
            android:background="@drawable/input_background"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:selectAllOnFocus="true" />

        <Space
            android:layout_width="@dimen/spacing_small"
            android:layout_height="1dp" />

        <EditText
            android:id="@+id/otpInput2"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_height"
            android:layout_weight="1"
            android:background="@drawable/input_background"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:selectAllOnFocus="true" />

        <Space
            android:layout_width="@dimen/spacing_small"
            android:layout_height="1dp" />

        <EditText
            android:id="@+id/otpInput3"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_height"
            android:layout_weight="1"
            android:background="@drawable/input_background"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:selectAllOnFocus="true" />

        <Space
            android:layout_width="@dimen/spacing_small"
            android:layout_height="1dp" />

        <EditText
            android:id="@+id/otpInput4"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_height"
            android:layout_weight="1"
            android:background="@drawable/input_background"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:selectAllOnFocus="true" />

    </LinearLayout>

    <TextView
        android:id="@+id/otpTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_timer"
        android:textColor="@color/secondary_text"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_large" />

    <Button
        android:id="@+id/verifyOtpButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/verify_otp_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/primary_button"
        android:layout_marginBottom="@dimen/spacing_small" />

    <Button
        android:id="@+id/resendOtpButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/resend_otp_button"
        android:textColor="@color/secondary_text"
        android:textStyle="bold"
        android:background="@drawable/secondary_button"
        android:layout_marginBottom="@dimen/spacing_small" />

    <Button
        android:id="@+id/backToLoginButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/back_to_login_button"
        android:textColor="@color/secondary_text"
        android:textStyle="bold"
        android:background="@drawable/secondary_button" />

</LinearLayout>